@@ -1,6 +1,9 @@
 -------------------------------------------------------------------------------
 Changes in version 3.1.2
 
+- Tweaked relay-ctrl-allow to only try to save a handle to the current
+  working directory if it's going to execute another command later.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
